---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: ????
  Changes:
    - Added an error catch for a common error that I cannot reproduce. It gives instructions on how to report the error, and prints several helpful things to a file.
    - Marked Death Markers as incompatible, because it somehow causes this mod to desync in multiplayer
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020-04-01
  Features:
    - You can now open multiple recipe quick reference windows simultaneously
    - Using the search hotkey while holding an item will open that item's material page, if one exists
    - Fluid searching with the hotkey now supports infinity pipes
  Changes:
    - Recipe quick reference windows are now draggable
    - Remote Interface:
      - open_info_gui -> open_gui
      - object_name -> object
      - 'object' is now specified as a table when opening a material GUI, the first entry being the material type, and the second the name
      - Recipe Quick Reference windows may be opened using the 'recipe-quick-reference` gui_type
        - source_data is not supported when opening this GUI type
  Bugfixes:
    - Fixed that items and fluids with identical names would conflict

---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-03-20
  Changes:
    - Materials that aren't used in any recipes are excluded from the Recipe Book
    - Significantly optimized GUI construction and update logic (it is now over 4x faster!)
    - Removed mod GUI button, it is replaced by a shortcut
    - Replaced the chef hat book icon with a proper "search recipe book" icon
    - Refactored search loop to make adding more features easier
    - Removed lualib and made it a separate mod, RaiLuaLib, that this mod now depends on
  Bugfixes: