@@ -21,11 +21,18 @@ data:extend{
     order = 'c'
   },
   {
+    type = 'bool-setting',
+    name = 'rb-use-fuzzy-search',
+    setting_type = 'runtime-per-user',
+    default_value = false,
+    order = 'd'
+  },
+  {
     type = 'string-setting',
     name = 'rb-default-search-category',
     setting_type = 'runtime-per-user',
     default_value = 'material',
     allowed_values = {'crafter', 'material', 'recipe'},
-    order = 'd'
+    order = 'e'
   }
 }
